Add handling for hardware bitmap compatibility in BaseBlurView
- Ensure hardware bitmaps are converted to software bitmaps for blur processing.
- Add methods to check and disable hardware bitmaps in view hierarchy.
- Update blur logic and error handling for hardware bitmap scenarios.
- Introduce logging for debugging bitmap processing issues.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation project(':QmBlurView')
     implementation project(':ButtomNavigation')
     implementation libs.appcompat
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
